--- a/style.css
+++ b/style.css
@@ -252,10 +252,31 @@ main .destination .section2 {
 /*section2 end*/
 
 /*section3 begin*/
-    .section3 h2 {
-        color: #004191;
-        text-align: center;
-    }
+.section3 h2 {
+    color: #004191;
+    text-align: center;
+}
+.swiper {
+    width: 100%;
+    height: 100%;
+  }
+
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
 /*section3 end*/
 
  /*main end*/
