--- a/style.css
+++ b/style.css
@@ -79,7 +79,8 @@ header {
     position: absolute;
     background-color: #f9f9f9;
     /* min-width: 120px; */
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0 0 8px rgb(214, 210, 210);
+    border-radius: 5px;
     z-index: 1;
     transform: translate(-160px, -40px);
   }
@@ -252,32 +253,222 @@ main .destination .section2 {
 /*section2 end*/
 
 /*section3 begin*/
-.section3 h2 {
-    color: #004191;
-    text-align: center;
-}
-.swiper {
-    width: 100%;
-    height: 100%;
-  }
 
-  .swiper-slide {
-    text-align: center;
-    font-size: 18px;
-    background: #fff;
+* {
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+  }
+  
+  .clearfix::after {
+    display: block;
+    content: "";
+    clear: both;
+  }
+  
+  
+  /* ==== MANSHET PART START -------- */
+  
+  .manshet_appartment {
     display: flex;
-    justify-content: center;
+    flex-wrap: wrap;
     align-items: center;
+    position: relative;
+    width: 100%;
+    margin: 0px auto 30px auto;
   }
-
-  .swiper-slide img {
+  
+  .manshet_appartment .gallery-top {
     display: block;
     width: 100%;
+    margin: 0px auto;
+  }
+  
+  .manshet_appartment .gallery-thumbs {
+    display: block;
+    width: 71%;
+    height: auto;
+    margin: 10px auto;
+    position: absolute;
+    right: 0;
+  }
+  
+  .sld_img {
+    display: block;
+    position: relative;
+    width: 100%;
+    border-radius: 10px;
+    overflow: hidden;
+  }
+  
+  .sld_img::before {
+    content: "";
+    display: block;
+    position: relative;
+    width: 100%;
+    padding-top: 56%;
+  }
+  
+  .sld_img img,
+  .sld_img video,
+  .sld_img iframe {
+    display: block;
+    position: absolute;
+    width: 100%;
     height: 100%;
+    border-radius: 5px;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
     object-fit: cover;
   }
+  
+  .sld_thumb_img {
+    display: block;
+    position: relative;
+    width: 345px;
+    max-width: 100%;
+    border-radius: 5px;
+    overflow: hidden;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    border: 1px solid transparent;
+  }
+  
+  .gallery-thumbs .swiper-slide:hover .sld_thumb_img {
+    border: 1px solid #2196f3;
+  }
+  
+  .gallery-thumbs .swiper-slide:hover .sld_thumb_img img {
+    transform: scale(1.1);
+  }
+  
+  .sld_thumb_img::before {
+    content: "";
+    display: block;
+    position: relative;
+    width: 100%;
+    padding-top: 134%;
+  }
+  
+  .sld_thumb_img img,
+  .sld_thumb_img video,
+  .sld_thumb_img iframe {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    object-fit: cover;
+    transition: all 0.3s ease;
+  }
+  
+  .swiper-slide-thumb-active div.thumb-number {
+    color: #FFD32A;
+    border-bottom: 2px solid #FFD32A;
+  }
+  
+  .thumb-number {
+    display: none;
+    width: 100%;
+    padding: 10px;
+    position: absolute;
+    left: 0px;
+    bottom: 0px;
+    text-align: left;
+    font: normal normal 600 12px/14px SanFrancisco-Regular;
+    letter-spacing: 0px;
+    color: #FFFFFF;
+    opacity: 1;
+  }
+  
+  .manshet_appartment .swiper-button-next,
+  .manshet_appartment .swiper-button-prev {
+    width: 40px;
+    height: 40px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 20px 20px;
+    border: 0;
+    outline: 0;
+    margin: 0;
+    bottom: 10px;
+    top: auto;
+    opacity: 1;
+    background-color: #ffffff;
+    border-radius: 50%;
+  }
+  
+  .manshet_appartment .swiper-button-next {
+    background-image: url("../img/next.svg");
+    right: 20px;
+  }
+  
+  .manshet_appartment .swiper-button-prev {
+    background-image: url("../img/prev.svg");
+    left: auto;
+    right: 70px;
+  }
+  
+  .manshet_appartment .swiper-slide.swiper-slide-visible.swiper-slide-active {
+    opacity: 0;
+    visibility: hidden;
+  }
+  
+  .manshet_appartment .swiper-slide.swiper-slide-prev {
+    opacity: 0;
+    visibility: hidden;
+  }
+  
+  .gallery-top .swiper-slide .sld_img {
+    transform: scale(0) !important;
+    -webkit-transform: scale(0) !important;
+    -moz-transform: scale(0) !important;
+    -ms-transform: scale(0) !important;
+    -o-transform: scale(0) !important;
+    transition: all 0.5s ease-in-out;
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -ms-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
+  }
+  
+  .gallery-top .swiper-slide.swiper-slide-active .sld_img {
+    transform: scale(1) !important;
+    -webkit-transform: scale(1) !important;
+    -moz-transform: scale(1) !important;
+    -ms-transform: scale(1) !important;
+    -o-transform: scale(1) !important;
+  }
+  
+  .gallery-top .swiper-slide.swiper-slide-prev .sld_img {
+    transform: scale(1) !important;
+    -webkit-transform: scale(1) !important;
+    -moz-transform: scale(1) !important;
+    -ms-transform: scale(1) !important;
+    -o-transform: scale(1) !important;
+  }
+  
+  
+  /* ==== MANSHET PART FINISH -------- */
 
 /*section3 end*/
+
+/*section4 begin*/
+  main .section4 {
+    margin: 50px 0 0 0;
+  }
+  main .section4 h2 {
+    text-align: center;
+    color: #004191;
+    padding-bottom: 30px;
+}
+/*section4 end*/
 
  /*main end*/
 
@@ -294,6 +485,7 @@ main .destination .section2 {
 /* connect begin */
 .connect-wp {
     position: fixed;
+    z-index: 99;
     right: 170px;
     bottom: 10px;
     gap: 15px;
@@ -304,6 +496,7 @@ main .destination .section2 {
 
 .connect-tel {
     position: fixed;
+    z-index: 99;
     right: 95px;
     bottom: 10px;
     gap: 15px;
@@ -314,6 +507,7 @@ main .destination .section2 {
 
 .connect-chevron {
     position: fixed;
+    z-index: 99;
     right: 20px;
     bottom: 10px;
     gap: 15px;
