--- a/style.css
+++ b/style.css
@@ -95,13 +95,16 @@ header {
 }
 
 .dropdown-content {
-  display: none;
+  /* display: none; */
+  visibility: hidden;
+  opacity: 0;
   position: absolute;
   background-color: #f9f9f9;
   box-shadow: 0 0 8px rgb(214, 210, 210);
   border-radius: 5px;
   z-index: 1;
   transform: translate(-160px, -40px);
+  transition: .5s all ease-in-out;
 }
 
 .dropdown-content ul {
@@ -130,7 +133,14 @@ header {
 }
 
 .lang-globe:hover .dropdown-content {
-  display: block;
+  visibility: visible;
+  opacity: 1;
+  cursor: pointer;
+}
+
+.lang-globe:hover .fa-globe {
+  color: #004191;
+  transition: .5s all ease-in-out;
 }
 
 /*hover lang drop-down*/
@@ -148,12 +158,45 @@ header {
   height: 30px;
   border-radius: 30px;
   cursor: pointer;
+
+  /* overflow: hidden; */
+}
+
+.burger-menu.activated {
+  /* transition: .5s; */
+
+}
+
+.burger-menu.activated .bar1 {
+  /* width: 100%; */
+  width: 50%;
+  rotate: 45deg;
+}
+
+.burger-menu.activated .bar2 {
+  rotate: 135deg;
+
+}
+
+.burger-menu.activated .bar3 {
+  rotate: 45deg;
+  width: 50%;
+  margin-left: 14px;
+
+}
+
+.right-menu .burger-menu.activated .bar1 {
+  transform: translateY(0);
+}
+
+.right-menu .burger-menu.activated .bar3 {
+  transform: translateY(0);
 }
 
 .burger-menu div {
   display: block;
   position: absolute;
-  width: 100%;
+  /* width: 100%; */
   height: 2.7px;
   background-color: white;
   transition: all .5s ease;
@@ -163,6 +206,7 @@ header {
 .burger-menu .bar1 {
   /* top: 6px; */
   width: 35%;
+  z-index: 99;
 }
 
 .burger-menu .bar2 {
@@ -173,7 +217,7 @@ header {
 .burger-menu .bar3 {
   top: 12px;
   width: 35%;
-  margin-left: 18px;
+  margin-left: 20px;
 }
 
 .nav1 .right-menu {
@@ -200,6 +244,7 @@ header {
   transform: translateY(-6px);
 }
 
+
 .right-menu .menu-open span:nth-child(2) {
   visibility: hidden;
   opacity: 0;
@@ -209,10 +254,31 @@ header {
   cursor: pointer;
   visibility: visible;
   opacity: 1;
+}
 
+.right-menu:hover .menu-open.actived span:nth-child(2) {
+  /* cursor: pointer; */
+  visibility: hidden;
+  opacity: 0;
 }
 
 .right-menu:hover .menu-open span:nth-child(1) {
+  visibility: hidden;
+  opacity: 0;
+}
+
+.right-menu .menu-open span:nth-child(3) {
+  visibility: hidden;
+  opacity: 0;
+}
+
+.right-menu .menu-open.actived span:nth-child(3) {
+  visibility: visible;
+  opacity: 1;
+  cursor: pointer;
+}
+
+.right-menu .menu-open.actived span:nth-child(1) {
   visibility: hidden;
   opacity: 0;
 }
@@ -1035,7 +1101,6 @@ footer .foot .subs-2 .soc-net a i:hover {
   }
 }
 
-
 @media (max-width:1099px) {
   .about .bg-1 .section1 {
     flex-direction: column;
@@ -1050,19 +1115,22 @@ footer .foot .subs-2 .soc-net a i:hover {
   }
 }
 
-@media (min-width: 992px) {
-  header .container {
-    /* max-width: 860px; */
+@media (max-width: 1055px) {
+  .section6 .connection .contact-right {
+    max-width: 100%;
+    padding: 60px 40px;
+  }
+
+  .section6 .connection .contact-right img {
+    width: 100%;
+
   }
 }
 
-
 @media (max-width: 992px) {
-
 
   .section6 .connection {
     flex-direction: column-reverse;
-
   }
 
   .section6 .connection .contact-right {
@@ -1103,6 +1171,10 @@ footer .foot .subs-2 .soc-net a i:hover {
 @media (max-width: 768px) {
   header .basliq-blur .nav-menu .nav1 .lang-globe {
     display: none;
+  }
+
+  header .basliq-blur .nav-menu .nav1 {
+    justify-content: center;
   }
 
   header .basliq-blur .nav-bottom .nav2 {
@@ -1167,10 +1239,6 @@ footer .foot .subs-2 .soc-net a i:hover {
 
 
 @media (max-width: 565px) {
-  header .nav-menu .logo {
-    /* justify-content: space-evenly; */
-    /* gap: 50px; */
-  }
 
   header .nav-menu .logo .nav1 {
     justify-content: center;
